@@ -3,8 +3,12 @@
 ## Requisitos
 * Java 11 ó 13 
 * JavaFX SDK 11.0.2 ó 13.0.2
-## Instrucciones
+## Instrucciones 
+### Linux
 * ```git clone https://github.com/sarquis88/simon```
 * ```cd simon```
 * ```chown user src/simon/simon.db```
+* ```java --module-path /path/to/javafx-sdk-VERSION/lib --add-modules=javafx.controls -jar out/artifacts/simon_jar/simon.jar```
+### Windows
+* ```git clone https://github.com/sarquis88/simon```
 * ```java --module-path /path/to/javafx-sdk-VERSION/lib --add-modules=javafx.controls -jar out/artifacts/simon_jar/simon.jar```
